--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li>Reading Books</li>
      </ol>
      <hr>
-     <a href="My contact.html">Contact Me</a>
+     <a href="contact.html">Contact Me</a>
      <hr>
      <table>
           <thead>
