--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      }
 </style>
 <body>
-     <center><img src="images/Snapchat-903625351.jpg" height="250px" alt="Divya profile photo">
+     <center><img src="images/profile.png" height="250px" alt="Divya profile photo">
      <h1>Divya Mehra</h1>
      <p>College Student and a <strong>Basketball Player</strong>.</p>
      <p>I am in my 2nd year of pursuing BCA from <strong><em>Amarpali Group Of Institute</em></strong>.</p></center>
